--- a/deneme.ipynb
+++ b/deneme.ipynb
@@ -50,6 +50,25 @@
     "show(v, axes=1, title=\"Volumetric Rendering of X-Ray Data\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0993cc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Voxel verisi (örnek olarak 100x100x100 yoğunluk matrisi)\n",
+    "volume = np.random.rand(100, 100, 100)  # VOXEL VERİ\n",
+    "\n",
+    "# Volumetrik görselleştirme (örnek)\n",
+    "from vedo import Volume, show\n",
+    "v = Volume(volume)\n",
+    "show(v, axes=1, title=\"Volumetric Rendering of X-Ray Data\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
